<resources>
    <string name="app_name">Recipe Book</string>
    <string name="txtBruTitle">Bruschetta Recipe</string>
    <string name="description">bruschetta img</string>
    <string name="btnBru">View Recipe</string>

    <string name="txtIngredients">Ingredients</string>
    <string name="txt1">4 plum tomatoes</string>
    <string name="txt2">6 basil leaves</string>
    <string name="txt3">3 garlic cloves, chopped</string>
    <string name="txt4">3 TB olive oil</string>
    <string name="txtDirections">Directions</string>
    <string name="txtMix">Combine the ingredients and add salt to taste. Top french bread slices
    with the mixture</string>
</resources>
